kubernetes/reverse-proxy/Namespace.yaml
apiVersion: v1
kind: Namespace
metadata: 
  name: jenkins
  labels: 
    name: jenkins
